--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>DigStack</title>
     <style>
-      html,
+      /* html,
       body,
       #app,
       #app > div {
         height: 100%;
-      }
+      } */
     </style>
   </head>
   <body>
